--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Presentations",
   "private": true,
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "release": "standard-version --commit-all --no-verify && git push --follow-tags origin master"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "npm test",
@@ -14,7 +16,8 @@
   "dependencies": {
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
-    "husky": "^1.1.2"
+    "husky": "^1.1.2",
+    "standard-version": "^6.0.1"
   },
   "repository": {
     "type": "git",
