--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/Soontao/presentations#readme",
   "devDependencies": {
-    "@marp-team/marp-cli": "^0.17.2"
+    "@marp-team/marp-cli": "^0.17.2",
+    "puppeteer": "^2.1.1"
   }
 }
