--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
   "devDependencies": {
     "@commitlint/cli": "^8",
     "@commitlint/config-conventional": "^8",
+    "@marp-team/marp-cli": "^0.17.2",
+    "@textlint/markdown-to-ast": "^6.1.7",
+    "fast-glob": "^3.2.2",
     "husky": "^3",
+    "isomorphic-git": "^1.3.1",
+    "lodash": "^4.17.15",
     "standard-version": "^7",
-    "@marp-team/marp-cli": "^0.17.2"
+    "textlint": "^11.6.3"
   }
 }
