--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "sqlite3": "^4.1.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Soontao/presentations.git"
