--- a/src/node/cim-training/session-5-example/express/package.json
+++ b/src/node/cim-training/session-5-example/express/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite3": "^4.1.1"
   }
 }
