--- a/src/node/cim-training/session-5-example/debug/mocha/.vscode/launch.json
+++ b/src/node/cim-training/session-5-example/debug/mocha/.vscode/launch.json
@@ -15,6 +15,9 @@
         "--colors",
         "${workspaceFolder}/test"
       ],
+      "env": {
+        "PORT":"39999"
+      },
       "internalConsoleOptions": "openOnSessionStart",
       "skipFiles": [
         "<node_internals>/**"
