--- a/src/node/cim-training/session-6-example/cap-02/.vscode/launch.json
+++ b/src/node/cim-training/session-6-example/cap-02/.vscode/launch.json
@@ -5,6 +5,16 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/gateway",
+      "name": "launch gateway",
+      "program": "${workspaceFolder}/gateway/node_modules/@sap/approuter/approuter.js",
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
+    },
+    {
       "name": "cds run",
       "type": "node",
       "request": "launch",
