--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@commitlint/cli": "^8",
     "@commitlint/config-conventional": "^8",
     "@marp-team/marp-cli": "^0.17.4",
+    "@newdash/newdash-node": "^5.5.0",
     "@textlint/markdown-to-ast": "^6.1.7",
     "fast-glob": "^3.2.2",
     "husky": "^3",
     "isomorphic-git": "^1.3.1",
-    "lodash": "^4.17.15",
     "pretty": "^2.0.0",
     "standard-version": "^7",
     "textlint": "^11.6.3"
