feat: xsuaa doc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,13 @@
     "Netlify",
     "Preload",
     "Theo",
+    "XSUAA",
     "echarts",
     "gitkeep",
     "graphviz",
     "hana",
-    "marp"
+    "marp",
+    "multitenant"
   ],
   "editor.formatOnSave": true
 }
