--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   },
   "homepage": "https://github.com/Soontao/presentations#readme",
   "devDependencies": {
-    "@commitlint/cli": "^8",
-    "@commitlint/config-conventional": "^8",
-    "@marp-team/marp-cli": "^0.17.4",
-    "@newdash/newdash-node": "^5.5.0",
-    "@textlint/markdown-to-ast": "^6.1.7",
-    "fast-glob": "^3.2.2",
-    "husky": "^3",
-    "isomorphic-git": "^1.3.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@marp-team/marp-cli": "^0.23.0",
+    "@newdash/newdash": "^5.17.1",
+    "@textlint/markdown-to-ast": "^6.2.6",
+    "fast-glob": "^3.2.4",
+    "husky": "^4.3.6",
+    "isomorphic-git": "^1.8.0",
     "pretty": "^2.0.0",
-    "standard-version": "^7",
-    "textlint": "^11.6.3"
+    "standard-version": "^9.1.0",
+    "textlint": "^11.7.7"
   }
 }
