--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
+    "server": "marp -p --server ./src",
     "release": "standard-version --commit-all --no-verify && git push --follow-tags origin master"
   },
   "husky": {
@@ -22,18 +23,26 @@
   "bugs": {
     "url": "https://github.com/Soontao/presentations/issues"
   },
+  "marp": {
+    "themeSet": "./theme"
+  },
   "homepage": "https://github.com/Soontao/presentations#readme",
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@marp-team/marp-cli": "^0.23.0",
-    "@newdash/newdash": "^5.17.1",
-    "@textlint/markdown-to-ast": "^6.2.6",
-    "fast-glob": "^3.2.4",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@marp-team/marp-cli": "^1.1.1",
+    "@marp-team/marp-core": "^2.0.3",
+    "@marp-team/marpit": "^2.0.1",
+    "@newdash/newdash": "^5.19.0",
+    "@textlint/markdown-to-ast": "^12.0.0",
+    "fast-glob": "^3.2.5",
     "husky": "^4.3.6",
-    "isomorphic-git": "^1.8.0",
+    "isomorphic-git": "^1.8.2",
     "pretty": "^2.0.0",
-    "standard-version": "^9.1.0",
-    "textlint": "^11.7.7"
+    "standard-version": "^9.3.0",
+    "textlint": "^12.0.0",
+    "@slidev/cli": "^0.20.5",
+    "@slidev/theme-default": "*",
+    "@slidev/theme-seriph": "*"
   }
 }
