--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@marp-team/marp-cli": "^1.1.1",
-    "@marp-team/marp-core": "^2.0.3",
-    "@marp-team/marpit": "^2.0.1",
+    "@marp-team/marp-cli": "^1.3.2",
+    "@marp-team/marp-core": "^2.1.1",
+    "@marp-team/marpit": "^2.1.1",
     "@newdash/newdash": "^5.19.0",
-    "@textlint/markdown-to-ast": "^12.0.0",
-    "fast-glob": "^3.2.5",
+    "@textlint/markdown-to-ast": "^12.0.2",
+    "fast-glob": "^3.2.7",
     "husky": "^4.3.6",
-    "isomorphic-git": "^1.8.2",
+    "isomorphic-git": "^1.10.0",
     "pretty": "^2.0.0",
-    "standard-version": "^9.3.0",
-    "textlint": "^12.0.0",
+    "standard-version": "^9.3.1",
+    "textlint": "^12.0.2",
     "@slidev/cli": "^0.20.5",
-    "@slidev/theme-default": "*",
-    "@slidev/theme-seriph": "*"
+    "@slidev/theme-default": "^0.19.1",
+    "@slidev/theme-seriph": "^0.19.1"
   }
 }
