feat: update docker presentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
   "cSpell.words": [
     "JIRA",
+    "Kubernates",
     "Kyma",
     "Netlify",
     "Preload",
     "Theo",
     "Theo's",
     "XSUAA",
+    "dockerignore",
     "echarts",
     "gitkeep",
     "graphviz",
