--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "server": "marp -p --server ./src",
-    "release": "standard-version --commit-all --no-verify && git push --follow-tags origin master"
+    "release": "standard-version --commit-all --no-verify"
   },
   "husky": {
     "hooks": {
@@ -32,18 +32,18 @@
   },
   "homepage": "https://github.com/Soontao/presentations#readme",
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
-    "@marp-team/marp-cli": "^1.3.2",
-    "@marp-team/marp-core": "^2.1.1",
-    "@marp-team/marpit": "^2.1.1",
-    "@newdash/newdash": "^5.19.0",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
+    "@marp-team/marp-cli": "^1.4.1",
+    "@marp-team/marp-core": "^2.2.0",
+    "@marp-team/marpit": "^2.1.2",
+    "@newdash/newdash": "^5.20.0",
     "@textlint/markdown-to-ast": "^12.0.2",
     "fast-glob": "^3.2.7",
     "husky": "^4.3.6",
     "isomorphic-git": "^1.10.0",
     "pretty": "^2.0.0",
-    "standard-version": "^9.3.1",
+    "standard-version": "^9.3.2",
     "textlint": "^12.0.2",
     "@slidev/cli": "^0.20.5",
     "@slidev/theme-default": "^0.19.1",
