--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,27 @@
 {
   "cSpell.words": [
-    "JIRA",
-    "Kubernates",
-    "Kyma",
-    "Netlify",
-    "Preload",
-    "Theo",
-    "Theo's",
-    "XSUAA",
     "dockerignore",
     "echarts",
     "gitkeep",
     "graphviz",
     "hana",
+    "JIRA",
     "kubectl",
+    "Kubernates",
+    "Kyma",
     "marp",
     "microservices",
+    "multitenacy",
     "multitenant",
+    "Netlify",
+    "Preload",
+    "slidev",
     "thedockerimages",
+    "Theo",
+    "Theo's",
     "theosun",
-    "vcap"
+    "vcap",
+    "XSUAA"
   ],
   "editor.formatOnSave": true,
   "markdown.marp.themes": [
