--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Soontao/presentations.git"
@@ -38,15 +37,19 @@
     "@marp-team/marp-core": "^2.2.0",
     "@marp-team/marpit": "^2.1.2",
     "@newdash/newdash": "^5.20.0",
+    "@slidev/cli": "^0.27.10",
+    "@slidev/theme-default": "*",
+    "@slidev/theme-seriph": "*",
     "@textlint/markdown-to-ast": "^12.0.2",
+    "@types/debug": "^4.1.7",
+    "colors": "^1.4.0",
+    "debug": "^4.3.2",
     "fast-glob": "^3.2.7",
     "husky": "^4.3.6",
     "isomorphic-git": "^1.10.0",
+    "mkdirp": "^1.0.4",
     "pretty": "^2.0.0",
     "standard-version": "^9.3.2",
-    "textlint": "^12.0.2",
-    "@slidev/cli": "^0.20.5",
-    "@slidev/theme-default": "^0.19.1",
-    "@slidev/theme-seriph": "^0.19.1"
+    "textlint": "^12.0.2"
   }
 }
