feat: theme update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
+    "atheme",
     "dockerignore",
     "echarts",
     "gitkeep",
     "graphviz",
     "hana",
+    "hljs",
     "JIRA",
     "kubectl",
     "Kubernates",
