--- a/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
+++ b/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
@@ -14,6 +14,7 @@
         "--with-mocks",
         "--in-memory?"
       ],
+      "envFile": "${workspaceFolder}/.env",
       "skipFiles": [
         "<node_internals>/**"
       ],
