--- a/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
+++ b/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
@@ -36,6 +36,7 @@
       "env": {
         "NODE_ENV": "production"
       },
+      "envFile": "${workspaceFolder}/.env",
       "internalConsoleOptions": "openOnSessionStart",
       "console": "internalConsole",
       "autoAttachChildProcesses": true
