--- a/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
+++ b/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
@@ -18,6 +18,9 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
       "internalConsoleOptions": "openOnSessionStart",
       "console": "internalConsole",
       "autoAttachChildProcesses": true
