--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "hana",
     "hljs",
     "JIRA",
+    "katex",
     "kubectl",
     "Kubernates",
     "Kyma",
@@ -17,6 +18,7 @@
     "multitenacy",
     "multitenant",
     "Netlify",
+    "plantuml",
     "Preload",
     "proto",
     "slidev",
