feat: update package manager

--- a/.github/workflows/nodejs-release.yml
+++ b/.github/workflows/nodejs-release.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 16.x
+          node-version: 18.x
           registry-url: https://registry.npmjs.org/
 
       - name: npm build
         run: |
-          npm install
-          bash ./build.sh
+          pnpm install
+          pnpm build
           zip -r dist.zip dist/
 
       - name: Release
