--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "node": ">=14",
     "npm": ">=7"
   },
+  "packageManager": "pnpm@7.1.3",
   "scripts": {
     "server": "marp -p --server ./src",
     "version:sw": "npx replace \"DEFAULT_CACHE\" \"CACHE_REV_$(git rev-parse --short HEAD)\" ./dist/sw.js",
-    "release": "npx standard-version --commit-all --no-verify"
+    "release": "npx standard-version --commit-all --no-verify",
+    "build": "node scripts/build.js"
   },
   "husky": {
     "hooks": {
@@ -35,14 +37,11 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@marp-team/marp-cli": "next",
-    "@marp-team/marp-core": "next",
-    "@marp-team/marpit": "next",
+    "@marp-team/marp-cli": "^1.7.2",
+    "@marp-team/marp-core": "^3.2.0",
+    "@marp-team/marpit": "^2.3.1",
     "@newdash/newdash": "^5.21.2",
     "@openui5/ts-types": "^1.101.0",
-    "@slidev/cli": "^0.28.10",
-    "@slidev/theme-default": "^0.21.2",
-    "@slidev/theme-seriph": "^0.21.2",
     "@textlint/markdown-to-ast": "^12.1.1",
     "@types/debug": "^4.1.7",
     "colors": "^1.4.0",
