--- a/.github/workflows/nodejs-release.yml
+++ b/.github/workflows/nodejs-release.yml
@@ -18,6 +18,8 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7
 
       - name: npm build
         run: |
