--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "packageManager": "pnpm@7.1.3",
   "scripts": {
     "server": "marp -p --server ./src",
-    "version:sw": "npx replace \"DEFAULT_CACHE\" \"CACHE_REV_$(git rev-parse --short HEAD)\" ./dist/sw.js",
     "release": "npx standard-version --commit-all --no-verify",
     "build": "node scripts/build.js"
   },
@@ -47,9 +46,11 @@
     "colors": "^1.4.0",
     "debug": "^4.3.4",
     "fast-glob": "^3.2.11",
+    "git-rev-sync": "^3.0.2",
     "husky": "^4.3.8",
     "mkdirp": "^1.0.4",
     "pretty": "^2.0.0",
+    "replace": "^1.2.1",
     "textlint": "^12.1.1"
   }
 }
