--- a/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
+++ b/src/node/cap-training/session-6-example/cap-01/.vscode/launch.json
@@ -1,14 +1,11 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "name": "cds run",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceFolder}/.vscode/cds",
+      "program": "${workspaceFolder}/node_modules/.bin/cds",
       "args": [
         "run",
         "--with-mocks",
