--- a/src/node/cap-training/session-6-example/cap-01/package.json
+++ b/src/node/cap-training/session-6-example/cap-01/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@sap/cds": "^5.9.6",
     "cds-feature-toggle": "^0.0.6",
-    "cds-hyper-app-service": "^0.0.6",
+    "cds-hyper-app-service": "^0.0.7",
     "cds-internal-tool": "^0.0.31",
     "cds-swagger-ui-express": "^0.4.0",
     "express": "^4.18.1",
@@ -25,7 +25,8 @@
     "sqlite3": "^5.0.8"
   },
   "overrides": {
-    "@sap/xsenv": "3.2.0"
+    "@sap/xsenv": "3.2.0",
+    "cds-internal-tool": "^0.0.31"
   },
   "jest": {
     "testTimeout": 15000
