--- a/src/node/cap-training/session-6-example/cap-01/package.json
+++ b/src/node/cap-training/session-6-example/cap-01/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "start": "cds run",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "npm test -- --coverage"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
