feat: doc update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,11 @@
   "markdown.marp.themes": [
     "theme/dracula.css",
     "theme/dark.css"
-  ]
+  ],
+  "github.copilot.enable": {
+    "*": true,
+    "yaml": false,
+    "plaintext": false,
+    "markdown": true
+  }
 }
