--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@openui5/ts-types": "^1.101.0",
     "@textlint/markdown-to-ast": "^12.1.1",
     "@types/debug": "^4.1.7",
+    "@types/markdown-it": "^12.2.3",
     "colors": "^1.4.0",
     "debug": "^4.3.4",
     "fast-glob": "^3.2.11",
