--- a/src/node/cap-training/session-6-example/cap-01/package.json
+++ b/src/node/cap-training/session-6-example/cap-01/package.json
@@ -2,9 +2,9 @@
   "name": "cap-01",
   "version": "1.0.0",
   "dependencies": {
-    "@sap/cds": "^6",
+    "@sap/cds": "^6.0.4",
     "cds-swagger-ui-express": "^0.5.0",
-    "express": "^4",
+    "express": "^4.18.1",
     "passport": "0.5.3"
   },
   "engines": {
@@ -16,8 +16,8 @@
     "coverage": "npm test -- --coverage"
   },
   "devDependencies": {
-    "@types/jest": "28",
-    "jest": "28",
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3",
     "sqlite3": "5.0.8"
   },
   "jest": {
