--- a/src/node/cap-training/session-6-example/cap-01/package.json
+++ b/src/node/cap-training/session-6-example/cap-01/package.json
@@ -2,10 +2,10 @@
   "name": "cap-01",
   "version": "1.0.0",
   "dependencies": {
-    "@sap/cds": "^6.0.4",
-    "cds-swagger-ui-express": "^0.5.0",
-    "express": "^4.18.1",
-    "passport": "0.5.3"
+    "@sap/cds": "^7",
+    "cds-swagger-ui-express": "^0",
+    "express": "^4",
+    "passport": "^0"
   },
   "engines": {
     "node": "16"
@@ -16,9 +16,9 @@
     "coverage": "npm test -- --coverage"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "jest": "^28.1.3",
-    "sqlite3": "5.1.5"
+    "@types/jest": "^29",
+    "jest": "^29",
+    "sqlite3": "^5"
   },
   "jest": {
     "testTimeout": 15000
