--- a/src/node/cap-training/session-6-example/cap-02/package.json
+++ b/src/node/cap-training/session-6-example/cap-02/package.json
@@ -2,19 +2,19 @@
   "name": "cap-uaa",
   "version": "1.0.0",
   "dependencies": {
-    "@sap/audit-logging": "^5.5.4",
-    "@sap/cds": "^5.9.8",
-    "@sap/hana-client": "^2.13.22",
-    "@sap/xsenv": "^3.3.2",
-    "@sap/xssec": "^3.2.13",
-    "express": "4.18.1",
-    "passport": "0.4.1"
+    "@sap/audit-logging": "^5",
+    "@sap/cds": "^6",
+    "@sap/hana-client": "^2",
+    "@sap/xsenv": "^3",
+    "@sap/xssec": "^3",
+    "express": "^4",
+    "passport": "^0.4.1"
   },
   "scripts": {
     "start": "npx cds run"
   },
   "devDependencies": {
-    "@sap/cds-dk": "^4.9.7",
-    "sqlite3": "5.1.5"
+    "@sap/cds-dk": "^6",
+    "sqlite3": "^5"
   }
 }
