--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
 auto-install-peers=false
+audit = false
+omit-lockfile-registry-resolved = true
+fund = false
+registry = https://registry.npmmirror.com
